Breakout/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\javassist-3.18.0.jar;C:\Program Files\Greenfoot\lib\commons-vfs2-2.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout
-d
\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\MyWorld.java
<---- end of javadoc command ---->
Loading source file \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\MyWorld.java...
Constructing Javadoc information...
\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\Ball.java:71: error: illegal start of expression
    }
    ^
\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\Ball.java:72: error: illegal start of statement
}
^
\\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\Ball.java:72: error: reached end of file while parsing
}
 ^
Standard Doclet version 1.8.0_111
Building tree for all the packages and classes...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\MyWorld.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\package-frame.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\package-summary.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\allclasses-frame.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\allclasses-noframe.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\index.html...
Generating \\Chs-fs4\student\skagawa188\My Documents\Greenfoot\Breakout\doc\stylesheet.css...
3 warnings
